--- a/GPV_NSW_Controller_Zelda_Makonede/switch_pro_zelda.css
+++ b/GPV_NSW_Controller_Zelda_Makonede/switch_pro_zelda.css
@@ -1,4 +1,6 @@
 /*
+This is made by Makonede and I'm just making a working CSS link for GamePad Viewer.
+
 This is a custom skin for Gamepad Viewer. Apply it by using the css URL parameter in the Gamepad Viewer URL:
 https://gamepadviewer.com/?p=1&css=https://<GitHub name>.github.io/custom/skin.css
 
