--- a/GPV_NSW_Controller_Zelda_Makonede/switch_pro_zelda.css
+++ b/GPV_NSW_Controller_Zelda_Makonede/switch_pro_zelda.css
@@ -142,7 +142,8 @@ NOTE: Player ordering starts at 0, so p0 = Player 1 */
     margin-top: 4px;
     background-position-y: -40px;
 }
-.custom .a {
+/*Original AB Placement*/
+/*.custom .a {
     background-position: 0px 0px;
     left: 85px;
     top: 38px;
@@ -151,6 +152,17 @@ NOTE: Player ordering starts at 0, so p0 = Player 1 */
     background-position: -42px 0px;
     left: 42px;
     top: 74px;
+}*/
+/*Swapped AB Placement*/
+.custom .a {
+    background-position: 0px 0px;
+    left: 42px;
+    top: 74px;
+}
+.custom .b {
+    background-position: -42px 0px;
+    left: 85px;
+    top: 38px;
 }
 .custom .x {
     background-position: -126px 0px;
